--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -3,12 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
-    <Button
-        android:id="@+id/btnFragmentKedua"
-        android:layout_width="wrap_content"
+    android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Go To Screen 2"
-        android:textAllCaps="false"/>
+        android:text="Screen 1"
+        android:textSize="10pt"
+        android:textAlignment="center"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+        <Button
+            android:id="@+id/btnFragmentKedua"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go To Screen 2"
+            android:textAllCaps="false"/>
+    </LinearLayout>
+
 </LinearLayout>
