--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -3,21 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     android:layout_margin="20dp">
 
-    <EditText
-        android:id="@+id/edit_nama"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Masukkan Nama"
-        android:background="@drawable/backdrop"
-        android:padding="10dp"/>
-    <Button
-        android:id="@+id/btnFragmentKetiga"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go To Page 3"
-        android:textAllCaps="false"
-        android:layout_margin="10dp"/>
+        android:text="Screen 2"
+        android:textSize="10pt"
+        android:textAlignment="center"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+        <EditText
+            android:id="@+id/edit_nama"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Masukkan Nama"
+            android:background="@drawable/backdrop"
+            android:padding="10dp"
+            android:layout_margin="20dp"/>
+        <Button
+            android:id="@+id/btnFragmentKetiga"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go To Page 3"
+            android:textAllCaps="false"
+            android:layout_margin="10dp"/>
+    </LinearLayout>
+
 </LinearLayout>
