--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -3,45 +3,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     android:layout_margin="20dp">
 
+
     <TextView
-        android:id="@+id/view_nama"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nama Anda"
-        android:textAlignment="center"
-        android:padding="10dp"/>
-    <TextView
-        android:id="@+id/view_usia"
+        android:text="Screen 3"
+        android:textSize="10pt"
+        android:textAlignment="center"/>
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Usia Anda"
-        android:textAlignment="center"
-        android:padding="10dp"
-        android:visibility="gone"/>
-    <TextView
-        android:id="@+id/view_Alamat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Alamat Anda"
-        android:textAlignment="center"
-        android:padding="10dp"
-        android:visibility="gone"/>
-    <TextView
-        android:id="@+id/view_pekerjaan"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pekerjaan Anda"
-        android:textAlignment="center"
-        android:padding="10dp"
-        android:visibility="gone"/>
-    <Button
-        android:id="@+id/btnFragmentKeEmpat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go To Page 4"
-        android:textAllCaps="false"
-        android:layout_margin="10dp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/view_nama"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nama Anda"
+            android:textAlignment="center"
+            android:textSize="10pt"
+            android:padding="10dp"/>
+        <TextView
+            android:id="@+id/view_usia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Usia Anda"
+            android:textAlignment="center"
+            android:padding="10dp"
+            android:visibility="gone"/>
+        <TextView
+            android:id="@+id/view_Alamat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Alamat Anda"
+            android:textAlignment="center"
+            android:padding="10dp"
+            android:visibility="gone"/>
+        <TextView
+            android:id="@+id/view_pekerjaan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Pekerjaan Anda"
+            android:textAlignment="center"
+            android:padding="10dp"
+            android:visibility="gone"/>
+        <Button
+            android:id="@+id/btnFragmentKeEmpat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go To Screen 3"
+            android:textAllCaps="false"
+            android:layout_margin="10dp"/>
+    </LinearLayout>
+
 </LinearLayout>
